// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> render active Tag Component 1`] = `
<div
  className="gio-progress"
>
  <div
    className="gio-progress-trail"
  >
    <div
      className="gio-progress-stroke gio-progress-active"
      style={
        Object {
          "width": "1%",
        }
      }
    />
  </div>
  <div
    className="gio-progress-info"
  >
    <span
      className="gio-progress-text"
    >
      1%
    </span>
    <span
      className="gio-progress-icon"
    />
  </div>
</div>
`;

exports[`<Progress /> render active Tag Component 2`] = `
<div
  className="gio-progress"
>
  <div
    className="gio-progress-trail"
  >
    <div
      className="gio-progress-stroke gio-progress-exception"
      style={
        Object {
          "width": "1%",
        }
      }
    />
  </div>
  <div
    className="gio-progress-info"
  >
    <span
      className="gio-progress-text"
    >
      1%
    </span>
    <span
      className="gio-progress-icon"
    >
      <svg
        className="gio-progress-exception-icon"
        height="1em"
        viewBox="0 0 14 14"
        width="1em"
      >
        <defs>
          <style />
        </defs>
        <g
          data-name="\\\\u56FE\\\\u5C42 2"
          id="close-circle-filled_svg__\\\\u56FE\\\\u5C42_2"
        >
          <g
            data-name="\\\\u56FE\\\\u5C42 1"
            id="close-circle-filled_svg__\\\\u56FE\\\\u5C42_1-2"
          >
            <path
              d="M4.17 4.17a.5.5 0 01.71 0l2 2a.19.19 0 00.28 0l2-2a.5.5 0 01.71 0 .5.5 0 010 .71l-2 2a.19.19 0 000 .28l2 2a.5.5 0 010 .71.5.5 0 01-.71 0l-2-2a.19.19 0 00-.28 0l-2 2a.5.5 0 01-.71 0 .5.5 0 010-.71l2-2a.19.19 0 000-.28l-2-2a.5.5 0 010-.71zM7 0a7 7 0 11-7 7 7 7 0 017-7z"
              fill="currentColor"
              fillRule="evenodd"
              id="close-circle-filled_svg__close-circle"
            />
          </g>
        </g>
      </svg>
    </span>
  </div>
</div>
`;

exports[`<Progress /> render sucess Tag Component 1`] = `
<div
  className="gio-progress"
>
  <div
    className="gio-progress-trail"
  >
    <div
      className="gio-progress-stroke gio-progress-success"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="gio-progress-info"
  >
    <span
      className="gio-progress-text"
    >
      100%
    </span>
    <span
      className="gio-progress-icon"
    >
      <svg
        className="gio-progress-success-icon"
        height="1em"
        viewBox="0 0 14 14"
        width="1em"
      >
        <defs>
          <style />
        </defs>
        <g
          data-name="\\\\u56FE\\\\u5C42 2"
          id="check-circle-filled_svg__\\\\u56FE\\\\u5C42_2"
        >
          <g
            data-name="\\\\u56FE\\\\u5C42 1"
            id="check-circle-filled_svg__\\\\u56FE\\\\u5C42_1-2"
          >
            <path
              d="M5.75 8.26a.19.19 0 00.28 0c.59-.59 2.85-2.84 3.74-3.74a.52.52 0 01.73 0 .51.51 0 010 .72L6.62 9.13l-.34.34a.46.46 0 01-.34.16.47.47 0 01-.36-.13l-.4-.39-1.74-1.74a.52.52 0 010-.72.52.52 0 01.35-.14.5.5 0 01.35.14c.47.47 1.28 1.29 1.61 1.61zM7 0a7 7 0 11-7 7 7 7 0 017-7z"
              fill="currentColor"
              fillRule="evenodd"
              id="check-circle-filled_svg__check-circle"
            />
          </g>
        </g>
      </svg>
    </span>
  </div>
</div>
`;
